--- a/templates/netinfo/page_sites_add.html
+++ b/templates/netinfo/page_sites_add.html
@@ -85,13 +85,13 @@
                                                     <button type="button" class="btn btn-w-m btn-outline btn-primary repeater-add-btn">Add</button>
                                                 </div>
                                                 <div class="items" data-group="contact">
-                                                    <div class="input-group m-b" id="contact_grup">
+                                                    <div class="input-group m-t" id="contact_grup">
                                                         <select class="custom-select col-md-3" data-name="type">
                                                             {% for item in contact_types %}
                                                             <option value="item.contact_type">{{ item.contact_type|upper }}</option>
                                                             {% endfor %}
                                                         </select>
-                                                        <input type="text" required class="col p-w-sm input_contact_data" data-name="contact_data">
+                                                        <input type="text" required class="col p-w-sm input_contact" data-name="contact_data">
                                                         <div class="input-group-append">
                                                             <button class="btn btn-outline btn-danger remove-btn" type="button" >Remove</button>
                                                         </div>
