--- a/templates/netinfo/comp_css_sites_detail.html
+++ b/templates/netinfo/comp_css_sites_detail.html
@@ -2,6 +2,8 @@
         <link rel="icon" type="image/png" href="{% static 'img/favicon.ico' %}"/>
         <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
         <link href="{% static 'font-awesome/css/font-awesome.css' %}" rel="stylesheet">
+        <!-- Custom -->
+        <link href="{% static 'css/plugins/toastr/toastr.min.css' %}" rel="stylesheet">
         <!-- Basic -->
         <link href="{% static 'css/animate.css' %}" rel="stylesheet">
         <link href="{% static 'css/style.css' %}" rel="stylesheet">
