--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -8,19 +8,14 @@
         <link rel="icon" type="image/png" href="{% static 'img/favicon.ico' %}"/>
         <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
         <link href="{% static 'font-awesome/css/font-awesome.css' %}" rel="stylesheet">
+        <!-- Custom -->
+        <link href="{% static 'css/plugins/toastr/toastr.min.css' %}" rel="stylesheet">
         <!-- Basic -->
         <link href="{% static 'css/animate.css' %}" rel="stylesheet">
         <link href="{% static 'css/style.css' %}" rel="stylesheet">
     </head>
     <body class="gray-bg">
         <div class="loginColumns animated fadeInDown">
-            <div class="row justify-content-md-center fixed-top">
-                <div class="col-md-8">
-                    {% for message in messages %}
-                    <div class="alert alert-danger alert-dismissable text-center"><button aria-hidden="true" data-dismiss="alert" class="close" type="button">×</button>{{ message }}</div>
-                    {% endfor %}
-                </div>
-            </div>
             <div class="row">
                 <div class="col-md-6">
                     <h2 class="font-bold">Welcome to ConnectBook</h2>
@@ -61,5 +56,28 @@
             </div>
         </div>
         {% include 'scripts/script_js.html' %}
+        {% for message in messages %}
+        <script type=text/javascript>
+            $(document).ready(function(){
+                toastr.options = {
+                    "closeButton": false,
+                    "debug": false,
+                    "progressBar": false,
+                    "preventDuplicates": false,
+                    "positionClass": "toast-top-center",
+                    "onclick": null,
+                    "showDuration": "400",
+                    "hideDuration": "1000",
+                    "timeOut": "7000",
+                    "extendedTimeOut": "1000",
+                    "showEasing": "swing",
+                    "hideEasing": "linear",
+                    "showMethod": "fadeIn",
+                    "hideMethod": "fadeOut"
+                };
+                toastr.error('{{ message }}');
+            });
+        </script>
+        {% endfor %}
     </body>
 </html>
