--- a/templates/scripts/script_js.html
+++ b/templates/scripts/script_js.html
@@ -5,7 +5,7 @@
         <script src="{% static 'js/bootstrap.js' %}"></script>
         <script src="{% static 'js/plugins/metisMenu/jquery.metisMenu.js' %}"></script>
         <script src="{% static 'js/plugins/slimscroll/jquery.slimscroll.min.js' %}"></script>
-
         <!-- Custom and plugin javascript -->
         <script src="{% static 'js/inspinia.js' %}"></script>
         <script src="{% static 'js/plugins/pace/pace.min.js' %}"></script>
+        <script src="{% static 'js/plugins/toastr/toastr.min.js' %}"></script>
