--- a/templates/scripts/script_js_sites_detail.html
+++ b/templates/scripts/script_js_sites_detail.html
@@ -10,4 +10,5 @@
         <!-- Custom and plugin javascript -->
         <script src="{% static 'js/inspinia.js' %}"></script>
         <script src="{% static 'js/plugins/pace/pace.min.js' %}"></script>
-        
+        <!-- toastr -->
+        <script src="{% static 'js/plugins/toastr/toastr.min.js' %}"></script>
