20200120-model del site

--- a/templates/netinfo/page_sites.html
+++ b/templates/netinfo/page_sites.html
@@ -69,7 +69,22 @@
                                                     <td class="text-center">
                                                         <a href="name/{{ site.alias_name }}" class="btn btn-xs btn-default"><i class="fa fa-ellipsis-h"></i></a>
                                                         <a href="name/{{ site.alias_name }}/edit" class="btn btn-xs btn-default"><i class="fa fa-pencil"></i></a>
-                                                        <a href="name/{{ site.alias_name }}/delete" class="btn btn-xs btn-danger"><i class="fa fa-times"></i></a>
+                                                        <!-- <a href="name/{{ site.alias_name }}/delete" class="btn btn-xs btn-danger"><i class="fa fa-times"></i></a> -->
+                                                        <button type="button" class="btn btn-xs btn-danger" data-toggle="modal" data-target="#{{ site.alias_name }}Modal"><i class="fa fa-times"></i></button>
+                                                        <div class="modal inmodal" id="{{ site.alias_name }}Modal" tabindex="-1" role="dialog" aria-hidden="true">
+                                                            <div class="modal-dialog">
+                                                                <div class="modal-content animated bounceInRight">
+                                                                    <div class="modal-body">
+                                                                        <p>Are you sure you want to permanently delete this site?<br/>Site Name: <span class="font-bold">{{ site.name }}</span><br/>This action cannot be undone!</p>
+                                                                        <form role="form" id="delete-form" action="#" method="post">
+                                                                            <input type='hidden' name='site_id' value='{{ site.id }}' class='form-control'>
+                                                                            <button type="button" class="btn btn-primary btn-sm">Yes</button>
+                                                                            <button type="button" class="btn btn-white btn-sm" data-dismiss="modal">Cancel</button>
+                                                                        </form>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
                                                     </td>
                                                 </tr>
                                                 {% endfor %}
