--- a/templates/scripts/script_js_sites.html
+++ b/templates/scripts/script_js_sites.html
@@ -8,6 +8,8 @@
         <!-- Data table javascript -->
         <script src="{% static 'js/plugins/dataTables/datatables.min.js' %}"></script>
         <script src="{% static 'js/plugins/dataTables/dataTables.bootstrap4.min.js' %}"></script>
+        <!-- toastr -->
+        <script src="{% static 'js/plugins/toastr/toastr.min.js' %}"></script>
         <!-- Custom and plugin javascript -->
         <script src="{% static 'js/inspinia.js' %}"></script>
         <script src="{% static 'js/plugins/pace/pace.min.js' %}"></script>
