--- a/templates/netinfo/comp_css_sites.html
+++ b/templates/netinfo/comp_css_sites.html
@@ -2,6 +2,8 @@
         <link rel="icon" type="image/png" href="{% static 'img/favicon.ico' %}"/>
         <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
         <link href="{% static 'font-awesome/css/font-awesome.css' %}" rel="stylesheet">
+        <!-- plugin toastr -->
+        <link href="{% static 'css/plugins/toastr/toastr.min.css' %}" rel="stylesheet">
         <!-- Datatables style -->
         <link href="{% static 'css/plugins/dataTables/datatables.min.css' %}" rel="stylesheet">
         <!-- Basic -->
