--- a/templates/netinfo/page_sites.html
+++ b/templates/netinfo/page_sites.html
@@ -73,12 +73,16 @@
                                                         <button type="button" class="btn btn-xs btn-danger" data-toggle="modal" data-target="#{{ site.alias_name }}Modal"><i class="fa fa-times"></i></button>
                                                         <div class="modal inmodal" id="{{ site.alias_name }}Modal" tabindex="-1" role="dialog" aria-hidden="true">
                                                             <div class="modal-dialog">
-                                                                <div class="modal-content animated bounceInRight">
+                                                                <div class="modal-content animated fadeIn">
+                                                                    <div class="modal-header">
+                                                                        <h4 class="modal-title">Delete Site</h4>
+                                                                    </div>
                                                                     <div class="modal-body">
                                                                         <p>Are you sure you want to permanently delete this site?<br/>Site Name: <span class="font-bold">{{ site.name }}</span><br/>This action cannot be undone!</p>
-                                                                        <form role="form" id="delete-form" action="#" method="post">
+                                                                        <form role="form" action="/sites/del/" method="post">
+                                                                            {% csrf_token %}
                                                                             <input type='hidden' name='site_id' value='{{ site.id }}' class='form-control'>
-                                                                            <button type="button" class="btn btn-primary btn-sm">Yes</button>
+                                                                            <button type="submit" class="btn btn-danger btn-sm">Yes</button>
                                                                             <button type="button" class="btn btn-white btn-sm" data-dismiss="modal">Cancel</button>
                                                                         </form>
                                                                     </div>
@@ -124,6 +128,29 @@
         <!-- script-js -->
         {% block script-js %}
         {% include 'scripts/script_js_sites.html' %}
+        {% for message in messages %}
+        <script type=text/javascript>
+            $(document).ready(function(){
+                toastr.options = {
+                    "closeButton": false,
+                    "debug": false,
+                    "progressBar": false,
+                    "preventDuplicates": false,
+                    "positionClass": "toast-bottom-right",
+                    "onclick": null,
+                    "showDuration": "400",
+                    "hideDuration": "1000",
+                    "timeOut": "7000",
+                    "extendedTimeOut": "1000",
+                    "showEasing": "swing",
+                    "hideEasing": "linear",
+                    "showMethod": "fadeIn",
+                    "hideMethod": "fadeOut"
+                };
+                toastr.{{ message.extra_tags }}('{{ message|safe }}');
+            });
+        </script>
+        {% endfor %}
         {% endblock %}
         <!-- end script-js -->
     <!-- </body> -->
