--- a/templates/netinfo/page_sites.html
+++ b/templates/netinfo/page_sites.html
@@ -68,7 +68,7 @@
                                                     <td>{{ site.add_field2 }}</td>
                                                     <td class="text-center">
                                                         <a href="name/{{ site.alias_name }}" class="btn btn-xs btn-default"><i class="fa fa-ellipsis-h"></i></a>
-                                                        <a href="name/{{ site.alias_name }}/edit" class="btn btn-xs btn-default"><i class="fa fa-pencil"></i></a>
+                                                        <a href="id/{{ site.id }}/edit" class="btn btn-xs btn-default"><i class="fa fa-pencil"></i></a>
                                                         <!-- <a href="name/{{ site.alias_name }}/delete" class="btn btn-xs btn-danger"><i class="fa fa-times"></i></a> -->
                                                         <button type="button" class="btn btn-xs btn-danger" data-toggle="modal" data-target="#{{ site.alias_name }}Modal"><i class="fa fa-times"></i></button>
                                                         <div class="modal inmodal" id="{{ site.alias_name }}Modal" tabindex="-1" role="dialog" aria-hidden="true">
