--- a/templates/netinfo/page_sites_edit.html
+++ b/templates/netinfo/page_sites_edit.html
@@ -40,7 +40,7 @@
                                     <h5>Edit Site</h5>
                                 </div>
                                 <div class="ibox-content">
-                                    <form role="form" id="site-form" action="#" method="post">
+                                    <form role="form" id="site-form" action="{% url 'sites_id_edit' sites_id %}" method="post">
                                         {% csrf_token %}
                                         {{ sites_form.non_field_errors }}
                                         {% for field in sites_form.visible_fields %}
@@ -77,9 +77,6 @@
                                         {% endfor %}
                                         <div class="hr-line-dashed"></div>
                                         <h5>Contacts</h5>
-                                        <div id="existing-contact">
-
-                                        </div>
                                         <div id="dynamic-contact">
                                             <div class="repeater-heading m-b">
                                                 <button type="button" class="btn btn-w-m btn-outline btn-primary repeater-add-btn">Add</button>
