--- a/templates/netinfo/page_sites_add.html
+++ b/templates/netinfo/page_sites_add.html
@@ -42,11 +42,11 @@
                                 <div class="ibox-content">
                                     <form role="form" id="site-form" action="{% url 'sites_add' %}" method="post">
                                         {% csrf_token %}
-                                        {{ sites_form.non_field_errors }}
-                                        {% for field in sites_form.visible_fields %}
+                                        {{ site_form.non_field_errors }}
+                                        {% for field in site_form.visible_fields %}
                                         <div class="form-group row">
                                             <label for="{{ field.id_for_label }}" class="col-lg-3 col-form-label">{{ field.label }}</label>
-                                            {% if sites_form.is_bound %}
+                                            {% if site_form.is_bound %}
                                             {% if field.errors %}
                                             <div class="col-lg-9">
                                             {% render_field field class="form-control" %}
