--- a/templates/netinfo/page_sites_detail.html
+++ b/templates/netinfo/page_sites_detail.html
@@ -149,6 +149,29 @@
         <!-- script-js -->
         {% block script-js %}
         {% include 'scripts/script_js_sites_detail.html' %}
+        {% for message in messages %}
+        <script type=text/javascript>
+            $(document).ready(function(){
+                toastr.options = {
+                    "closeButton": false,
+                    "debug": false,
+                    "progressBar": false,
+                    "preventDuplicates": false,
+                    "positionClass": "toast-bottom-right",
+                    "onclick": null,
+                    "showDuration": "400",
+                    "hideDuration": "1000",
+                    "timeOut": "7000",
+                    "extendedTimeOut": "1000",
+                    "showEasing": "swing",
+                    "hideEasing": "linear",
+                    "showMethod": "fadeIn",
+                    "hideMethod": "fadeOut"
+                };
+                toastr.{{ message.extra_tags }}('{{ message|safe }}');
+            });
+        </script>
+        {% endfor %}
         {% endblock %}
         <!-- end script-js -->
     <!-- </body> -->
