20200202-site-edit-done

--- a/templates/scripts/script_js_sites_edit.html
+++ b/templates/scripts/script_js_sites_edit.html
@@ -29,5 +29,10 @@
                         }
                     }
                 });
+
+                $('.delete-contact').click(function(){
+                    $(this).parent().siblings('.contact_id').attr('name', 'contact_id_del[]');
+                    $(this).closest('.input-group').hide();
+                });
             });
         </script>
