--- a/templates/netinfo/page_sites_detail.html
+++ b/templates/netinfo/page_sites_detail.html
@@ -49,7 +49,7 @@
                                                         <a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
                                                         <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="fa fa-wrench"></i></a>
                                                         <ul class="dropdown-menu dropdown-user">
-                                                            <li><a href="{% url 'sites_id_edit' site_data.id %}" class="dropdown-item">Edit</a></li>
+                                                            <li><a href="{% url 'sites_edit_id' site_data.id %}" class="dropdown-item">Edit</a></li>
                                                             <li><a data-toggle="modal" data-target="#{{ site_data.alias_name }}Modal" class="dropdown-item">Delete</a></li>
                                                         </ul>
                                                     </div>
