--- a/templates/netinfo/page_sites_edit.html
+++ b/templates/netinfo/page_sites_edit.html
@@ -40,7 +40,7 @@
                                     <h5>Edit Site</h5>
                                 </div>
                                 <div class="ibox-content">
-                                    <form role="form" id="site-form" action="{% url 'sites_id_edit' site_id %}" method="post">
+                                    <form role="form" id="site-form" action="{% url 'sites_edit_id' site_id %}" method="post">
                                         {% csrf_token %}
                                         {{ site_form.non_field_errors }}
                                         {% for hidden_field in site_form.hidden_fields %}
@@ -89,6 +89,7 @@
                                             {% for contact in contact_data %}
                                             <div class="existing-items" data-group="contact">
                                                 <div class="input-group m-t" id="contact_grup">
+                                                    <input type="hidden" class="contact_id" data-skip-name="true" name="contact_id[]" value="{{ contact.id }}"/>
                                                     <select class="custom-select col-md-3" data-skip-name="true" name="contact_type[]">
                                                     {% for item in contact_types %}
                                                         {% if contact.type == item.contact_type %}
@@ -100,7 +101,7 @@
                                                     </select>
                                                     <input type="text" required class="col p-w-sm input_contact_data" data-skip-name="true" name="contact_data[]" value="{{ contact.contact_data }}"/>
                                                     <div class="input-group-append">
-                                                        <button class="btn btn-outline btn-danger remove-btn" type="button">Remove</button>
+                                                        <button class="btn btn-outline btn-danger remove-btn delete-contact" type="button">Remove</button>
                                                     </div>
                                                 </div>
                                             </div>
@@ -108,12 +109,12 @@
                                             {% endif %}
                                             <div class="items" data-group="contact">
                                                 <div class="input-group m-t" id="contact_grup">
-                                                    <select class="custom-select col-md-3" data-skip-name="true" name="contact_type[]">
+                                                    <select class="custom-select col-md-3" data-skip-name="true" name="contact_type_add[]">
                                                         {% for item in contact_types %}
                                                         <option value="{{ item.contact_type }}">{{ item.contact_type|upper }}</option>
                                                         {% endfor %}
                                                     </select>
-                                                    <input type="text" required class="col p-w-sm input_contact_data" data-skip-name="true" name="contact_data[]"/>
+                                                    <input type="text" required class="col p-w-sm input_contact_data" data-skip-name="true" name="contact_data_add[]"/>
                                                     <div class="input-group-append">
                                                         <button class="btn btn-outline btn-danger remove-btn" type="button">Remove</button>
                                                     </div>
